Initial implementation of MonitoringService
Implemented main application of MonitoringService.
Added ReportManager interface. Added MaxReports and
PollRateResolution properties to ReportManager interface.
Implemented simple logger.

Tested:
 - Built without Yocto and ran on x86 platform with success
 - Added monitoring-service to romulus image using
   recipe-phosphor/telemetry from meta-phosphor repository
 - Started as service in romulus image in QEMU with success
 - Verified that all added properties are present in dbus

Change-Id: I26af7a19b1f9cac32e9e9da65523d72a36e13855
Signed-off-by: Wludzik, Jozef <jozef.wludzik@intel.com>
Signed-off-by: Krzysztof Grobelny <krzysztof.grobelny@intel.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
-build
+boost-src/
+build/
+DartConfiguration.tcl
+dependencies/
+external-projects/
+monitoring-service
+sdbusplus-build/
+sdbusplus-project/
+sdbusplus-src/
+tests/monitoring-service-ut
 
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,vim,intellij,cmake
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,vim,intellij,cmake
