Initial implementation of MonitoringService
Implemented main application of MonitoringService. Added interface
ReportManager to dbus system. Prepared simple logger.
Using CMakeFile it is possible to compile it using Yocto and
natively on system with gcc-10.

Signed-off-by: Wludzik, Jozef <jozef.wludzik@intel.com>
Signed-off-by: Krzysztof Grobelny <krzysztof.grobelny@intel.com>
Change-Id: I26af7a19b1f9cac32e9e9da65523d72a36e13855

--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,11 @@ tags
 .history
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,vim,intellij,cmake
+
+boost-src/
+dependencies/
+external-projects/
+monitoring-service
+sdbusplus-build/
+sdbusplus-project/
+sdbusplus-src/
