--- a/CMakeLists.txt.in
+++ b/CMakeLists.txt.in
@@ -8,6 +8,15 @@ file (MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/dependencies)
 file (MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/dependencies/include)
 
 externalproject_add (
+    gtest
+    GIT_REPOSITORY "https://github.com/google/googletest.git"
+    GIT_TAG 4fe018038f87675c083d0cfb6a6b57c274fb1753
+    SOURCE_DIR "${CMAKE_BINARY_DIR}/googletest-src"
+    BINARY_DIR "${CMAKE_BINARY_DIR}/googletest-build"
+    CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}/dependencies
+)
+
+externalproject_add (
     Boost
     URL https://dl.bintray.com/boostorg/release/1.73.0/source/boost_1_73_0.tar.gz
     URL_MD5 4036cd27ef7548b8d29c30ea10956196
