--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
 boost-src/
 build/
+DartConfiguration.tcl
 dependencies/
 external-projects/
 monitoring-service
 sdbusplus-build/
 sdbusplus-project/
 sdbusplus-src/
+tests/monitoring-service-ut
+googletest-build/
+googletest-src/
 
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,vim,intellij,cmake
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,vim,intellij,cmake
