--- a/CMakeLists.txt.in
+++ b/CMakeLists.txt.in
@@ -8,6 +8,15 @@ file (MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/dependencies)
 file (MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/dependencies/include)
 
 externalproject_add (
+    gtest
+    GIT_REPOSITORY "https://github.com/google/googletest.git"
+    GIT_TAG 4fe018038f87675c083d0cfb6a6b57c274fb1753
+    SOURCE_DIR "${CMAKE_BINARY_DIR}/googletest-src"
+    BINARY_DIR "${CMAKE_BINARY_DIR}/googletest-build"
+    CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}/dependencies
+)
+
+externalproject_add (
     Boost
     URL https://dl.bintray.com/boostorg/release/1.73.0/source/boost_1_73_0.tar.gz
     URL_MD5 4036cd27ef7548b8d29c30ea10956196
@@ -42,4 +51,16 @@ externalproject_add (
                        ${CMAKE_BINARY_DIR}/dependencies/lib/ &&
                     cp -r ${CMAKE_BINARY_DIR}/sdbusplus-src/include/sdbusplus
                           ${CMAKE_BINARY_DIR}/dependencies/include/.
+)
+
+externalproject_add (
+    nlohmann-json
+    URL https://github.com/nlohmann/json/releases/download/v3.9.1/include.zip
+    URL_MD5 d2f66c608af689e21d69a33c220e974e
+    SOURCE_DIR "${CMAKE_BINARY_DIR}/nlohmann-json-src"
+    BINARY_DIR "${CMAKE_BINARY_DIR}/nlohmann-json-build"
+    CONFIGURE_COMMAND ""
+    BUILD_COMMAND ""
+    INSTALL_COMMAND cp -r ${CMAKE_BINARY_DIR}/nlohmann-json-src/single_include/nlohmann
+                          ${CMAKE_BINARY_DIR}/dependencies/include/
 )
