created sensor cache class
Change-Id: I552b2016bca4688e1b2a223297587826af256b54
Signed-off-by: Krzysztof Grobelny <krzysztof.grobelny@intel.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,7 +8,10 @@ find_package (Threads REQUIRED)
 
 add_executable (monitoring-service-ut
     ../src/persistent_json_storage.cpp
+    ../src/sensor_cache.cpp
     src/test_persistent_json_storage.cpp
+    src/test_sensor_cache.cpp
+    src/utils/generate_unique_mock_id.cpp
 )
 
 include_directories (${CMAKE_CURRENT_SOURCE_DIR}/src)
