created sensor cache class
Change-Id: I552b2016bca4688e1b2a223297587826af256b54
Signed-off-by: Krzysztof Grobelny <krzysztof.grobelny@intel.com>

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -25,7 +25,10 @@ test(
         'monitoring-service-ut',
         [
             '../src/persistent_json_storage.cpp',
+            '../src/sensor_cache.cpp',
             'src/test_persistent_json_storage.cpp',
+            'src/test_sensor_cache.cpp',
+            'src/utils/generate_unique_mock_id.cpp',
         ],
         dependencies: [
             boost,
@@ -34,6 +37,6 @@ test(
             nlohmann_json,
             sdbusplus,
         ],
-        include_directories: '../src',
+        include_directories: ['../src', 'src']
     )
 )
