--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package (Threads REQUIRED)
 add_executable (monitoring-service-ut
     src/main.cpp
     src/test_persistent_json_storage.cpp
+    src/test_sensor_cache.cpp
     src/mocks/json_storage.cpp
     ../src/persistent_json_storage.cpp
 )
