Created sensor cache class
Created sensor cache and sensor interface that needs to be
implemented by sensors.

Tested:
- Sensors created by sensor cache are stored and reused if
  there is try to access same sensor multiple times.
- All other units tests are passing

Change-Id: I552b2016bca4688e1b2a223297587826af256b54
Signed-off-by: Krzysztof Grobelny <krzysztof.grobelny@intel.com>

--- a/meson.build
+++ b/meson.build
@@ -29,7 +29,12 @@ add_project_arguments(
     language: 'cpp'
 )
 
-boost = dependency('boost', version: '>=1.74.0', required: false)
+boost = dependency(
+  'boost',
+  version: '>=1.74.0',
+  required: false,
+  modules: ['coroutine'])
+
 if not boost.found()
     subproject('boost', required: false)
     boost  = declare_dependency(include_directories: 'subprojects/boost_1_74_0')
@@ -67,9 +72,12 @@ executable(
     'telemetry',
     [
         'src/main.cpp',
-        'src/report.cpp',
-        'src/report_manager.cpp',
         'src/persistent_json_storage.cpp',
+        'src/report.cpp',
+        'src/report_factory.cpp',
+        'src/report_manager.cpp',
+        'src/sensor.cpp',
+        'src/sensor_cache.cpp',
     ],
     dependencies: [
         boost,
