--- a/meson.build
+++ b/meson.build
@@ -53,6 +53,7 @@ executable(
     'telemetry',
     [
         'src/main.cpp',
+        'src/report.cpp',
         'src/report_manager.cpp',
     ],
     dependencies: [
