Add Report interface to dbus
Change-Id: Ib20cfda1f0e27ef20b60e66d52c3d11f31f61a96
Signed-off-by: Wludzik, Jozef <jozef.wludzik@intel.com>

--- a/meson.build
+++ b/meson.build
@@ -41,6 +41,7 @@ sdbusplus = dependency('sdbusplus', static: true, fallback: ['sdbusplus', 'sdbus
 
 src_files = [
     'src/main.cpp',
+    'src/report.cpp',
     'src/report_manager.cpp',
 ]
 
