Add Report interface to dbus
Added AddReport method to ReportManager to allow dbus user
to create new Report. Added Report object with Report and Delete
interfaces.

Tested:
 - Verified that telemetry service works in romulus
 - Added and removed report from ReportManager collection

Change-Id: Ib20cfda1f0e27ef20b60e66d52c3d11f31f61a96
Signed-off-by: Wludzik, Jozef <jozef.wludzik@intel.com>

--- a/meson.build
+++ b/meson.build
@@ -43,6 +43,7 @@ executable(
     'telemetry',
     [
         'src/main.cpp',
+        'src/report.cpp',
         'src/report_manager.cpp',
     ],
     dependencies: [
