implemented sensor class
Change-Id: I8c9d58cc986c1fe2a4d2386815d559814016efa6
Signed-off-by: Krzysztof Grobelny <krzysztof.grobelny@intel.com>

--- a/meson.build
+++ b/meson.build
@@ -27,7 +27,12 @@ add_project_arguments(
     language: 'cpp'
 )
 
-boost = dependency('boost', version: '>=1.73.0', required: false)
+boost = dependency(
+  'boost',
+  version: '>=1.73.0',
+  required: false,
+  modules: ['coroutine'])
+
 if not boost.found()
     subproject('boost', required: false)
     boost  = declare_dependency(include_directories: 'subprojects/boost_1_73_0')
@@ -68,6 +73,7 @@ executable(
         'src/report.cpp',
         'src/report_manager.cpp',
         'src/persistent_json_storage.cpp',
+        'src/sensor.cpp',
     ],
     dependencies: [
         boost,
