WIP: implemented sensor class
Change-Id: I8c9d58cc986c1fe2a4d2386815d559814016efa6
Signed-off-by: Krzysztof Grobelny <krzysztof.grobelny@intel.com>

--- a/meson.build
+++ b/meson.build
@@ -54,9 +54,10 @@ endif
 
 src_files = [
     'src/main.cpp',
+    'src/persistent_json_storage.cpp',
     'src/report.cpp',
     'src/report_manager.cpp',
-    'src/persistent_json_storage.cpp',
+    'src/sensor.cpp',
 ]
 
 executable(
