Add ReportManager and Report unit tests
Introduced ReportFactory to seperate Report and ReportManager
unit tests.

Change-Id: I1860e280d26ee4becc52de98dd65e5697d26b376
Signed-off-by: Wludzik, Jozef <jozef.wludzik@intel.com>

--- a/meson.build
+++ b/meson.build
@@ -71,6 +71,7 @@ executable(
     [
         'src/main.cpp',
         'src/report.cpp',
+        'src/report_factory.cpp',
         'src/report_manager.cpp',
         'src/persistent_json_storage.cpp',
         'src/sensor.cpp',
