Add ReportManager tests
Change-Id: I1860e280d26ee4becc52de98dd65e5697d26b376
Signed-off-by: Wludzik, Jozef <jozef.wludzik@intel.com>

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -28,10 +28,14 @@ test(
             '../src/persistent_json_storage.cpp',
             '../src/sensor_cache.cpp',
             '../src/sensor.cpp',
+            '../src/report_manager.cpp',
+            '../src/report.cpp',
             'src/stubs/dbus_sensor_object.cpp',
             'src/test_persistent_json_storage.cpp',
             'src/test_sensor_cache.cpp',
             'src/test_sensor.cpp',
+            'src/test_report.cpp',
+            'src/test_report_manager.cpp',
             'src/utils/generate_unique_mock_id.cpp',
             'src/utils/test_unique_call.cpp',
         ],
