WIP report becomes periodic
Change-Id: I7f23ca05d77efb0f18d2c0d0f138c524ffb4f6af
Signed-off-by: Krzysztof Grobelny <krzysztof.grobelny@intel.com>

--- a/meson.build
+++ b/meson.build
@@ -72,11 +72,13 @@ executable(
     'telemetry',
     [
         'src/main.cpp',
+        'src/metric.cpp',
+        'src/persistent_json_storage.cpp',
         'src/report.cpp',
         'src/report_factory.cpp',
         'src/report_manager.cpp',
-        'src/persistent_json_storage.cpp',
         'src/sensor.cpp',
+        'src/sensor_cache.cpp',
     ],
     dependencies: [
         boost,
