--- a/tests/meson.build
+++ b/tests/meson.build
@@ -23,20 +23,22 @@ test(
     executable(
         'telemetry-ut',
         [
-            'src/dbus_environment.cpp',
-            'src/main.cpp',
+            '../src/metric.cpp',
             '../src/persistent_json_storage.cpp',
-            '../src/sensor_cache.cpp',
-            '../src/sensor.cpp',
             '../src/report.cpp',
             '../src/report_factory.cpp',
             '../src/report_manager.cpp',
+            '../src/sensor.cpp',
+            '../src/sensor_cache.cpp',
+            'src/dbus_environment.cpp',
+            'src/main.cpp',
             'src/stubs/dbus_sensor_object.cpp',
+            'src/test_metric.cpp',
             'src/test_persistent_json_storage.cpp',
-            'src/test_sensor_cache.cpp',
-            'src/test_sensor.cpp',
             'src/test_report.cpp',
             'src/test_report_manager.cpp',
+            'src/test_sensor.cpp',
+            'src/test_sensor_cache.cpp',
             'src/utils/generate_unique_mock_id.cpp',
             'src/utils/test_unique_call.cpp',
         ],
