--- a/tests/meson.build
+++ b/tests/meson.build
@@ -23,6 +23,7 @@ test(
     executable(
         'telemetry-ut',
         [
+            '../src/metric.cpp',
             '../src/persistent_json_storage.cpp',
             '../src/report.cpp',
             '../src/report_factory.cpp',
@@ -33,6 +34,7 @@ test(
             'src/main.cpp',
             'src/stubs/dbus_sensor_object.cpp',
             'src/test_detached_timer.cpp',
+            'src/test_metric.cpp',
             'src/test_persistent_json_storage.cpp',
             'src/test_report.cpp',
             'src/test_report_manager.cpp',
