Implement NumericThreshold for Trigger
Implemented NumericThreshold for Trigger that allows to set
expected threshold value for collection of sensors and monitors
if this value is crossed. Implemented detection of direction
when threshold value is crossed. Added initial interface that
is used to commit an action when threshold value is crossed.

Tested:
 - Passed unit tests
 - Built in yocto envrionment with success
 - Telemetry service started successfully in OpenBMC

Change-Id: I1ff7ab96174a27576786f0b9a71554fe1eeff436
Signed-off-by: Wludzik, Jozef <jozef.wludzik@intel.com>

--- a/meson.build
+++ b/meson.build
@@ -81,6 +81,7 @@ executable(
     [
         'src/main.cpp',
         'src/metric.cpp',
+        'src/numeric_threshold.cpp',
         'src/persistent_json_storage.cpp',
         'src/report.cpp',
         'src/report_factory.cpp',
