--- a/tests/meson.build
+++ b/tests/meson.build
@@ -32,6 +32,7 @@ test(
             '../src/sensor.cpp',
             '../src/sensor_cache.cpp',
             '../src/trigger.cpp',
+            '../src/trigger_actions.cpp',
             '../src/trigger_factory.cpp',
             '../src/trigger_manager.cpp',
             'src/dbus_environment.cpp',
@@ -48,6 +49,7 @@ test(
             'src/test_transform.cpp',
             'src/test_trigger.cpp',
             'src/test_trigger_manager.cpp',
+            'src/test_trigger_actions.cpp',
             'src/test_unique_call.cpp',
             'src/utils/generate_unique_mock_id.cpp',
         ],
