--- a/tests/meson.build
+++ b/tests/meson.build
@@ -1,21 +1,9 @@
-gtest_dep = dependency('gtest', main: true, disabler: true, required: false)
-gmock_dep = dependency('gmock', disabler: true, required: false)
+gtest_dep = dependency('gtest', main: false, required: false, version: '>=1.10.0')
+gmock_dep = dependency('gmock', required: false, version: '>=1.10.0')
 if not gtest_dep.found() or not gmock_dep.found()
-    gtest_proj = import('cmake').subproject('googletest', required: false)
-    if gtest_proj.found()
-        gtest_dep = declare_dependency(
-            dependencies: [
-                dependency('threads'),
-                gtest_proj.dependency('gtest')
-            ]
-        )
-        gmock_dep = gtest_proj.dependency('gmock')
-  else
-        assert(
-            not get_option('tests').enabled(),
-            'Googletest is required if tests are enabled'
-        )
-  endif
+    gtest_proj = import('cmake').subproject('googletest')
+    gtest_dep = gtest_proj.dependency('gtest')
+    gmock_dep = gtest_proj.dependency('gmock')
 endif
 
 test(
