--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 build/
 xyz.openbmc_project.Telemetry.service
 telemetry
+__pycache__
 
 # Created by https://www.toptal.com/developers/gitignore/api/vim,intellij,meson,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=vim,intellij,meson,visualstudiocode
