--- a/meson.build
+++ b/meson.build
@@ -73,6 +73,7 @@ add_project_arguments(
 executable(
     'telemetry',
     [
+        'src/details/collection_function.cpp',
         'src/discrete_threshold.cpp',
         'src/main.cpp',
         'src/metric.cpp',
@@ -88,6 +89,7 @@ executable(
         'src/trigger_actions.cpp',
         'src/trigger_factory.cpp',
         'src/trigger_manager.cpp',
+        'src/types/report_types.cpp',
         'src/utils/conversion_trigger.cpp',
     ],
     dependencies: [
