--- a/tests/meson.build
+++ b/tests/meson.build
@@ -25,6 +25,7 @@ test(
             '../src/trigger_actions.cpp',
             '../src/trigger_factory.cpp',
             '../src/trigger_manager.cpp',
+            '../src/types/report_types.cpp',
             '../src/utils/conversion_trigger.cpp',
             'src/dbus_environment.cpp',
             'src/main.cpp',
