Added discrete threshold trigger support
Discrete threshold params now include 'onChange' bool property
Implemented discrete threshold logic
Added unit tests coverage for discrete trigger

Supported scenarios:
-discrete threshold with dwell time and value
-discrete threshold with dwell time and without value (onChange)
-discrete threshold with value, without dwell time
-discrete threshold onChange, without dwell time

Tests:
-Unit tests passed

Change-Id: Id60a48f4113bd955d97e154888c00d1b6e5490af
Signed-off-by: Szymon Dompke <szymon.dompke@intel.com>

--- a/meson.build
+++ b/meson.build
@@ -71,6 +71,7 @@ add_project_arguments(
 executable(
     'telemetry',
     [
+        'src/discrete_threshold.cpp',
         'src/main.cpp',
         'src/metric.cpp',
         'src/numeric_threshold.cpp',
