--- a/tests/meson.build
+++ b/tests/meson.build
@@ -11,6 +11,7 @@ test(
     executable(
         'telemetry-ut',
         [
+            '../src/discrete_threshold.cpp',
             '../src/metric.cpp',
             '../src/numeric_threshold.cpp',
             '../src/persistent_json_storage.cpp',
@@ -28,6 +29,7 @@ test(
             'src/stubs/dbus_sensor_object.cpp',
             'src/test_conversion.cpp',
             'src/test_detached_timer.cpp',
+            'src/test_discrete_threshold.cpp',
             'src/test_metric.cpp',
             'src/test_numeric_threshold.cpp',
             'src/test_persistent_json_storage.cpp',
