Read persistent triggers from storage
Read json storage file for persistent triggers.
Add trigger to telemetry service.
Cover code with UTs.

Tested:
  - Passed unit tests
  - Tested on QEMU
    * starting app without configuration
    * restart app with configuration stored
    * restart app with configuration in incorrect version
    * restart app with configuration malformed

Change-Id: I2cb9324abdb8323be8a7f0c932ed7f70c5bc2891
Signed-off-by: Cezary Zwolak <cezary.zwolak@intel.com>
Signed-off-by: Lukasz Kazmierczak <lukasz.kazmierczak@intel.com>

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ build/
 xyz.openbmc_project.Telemetry.service
 telemetry
 __pycache__
+*.bak
 
 # Created by https://www.toptal.com/developers/gitignore/api/vim,intellij,meson,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=vim,intellij,meson,visualstudiocode
@@ -161,5 +162,10 @@ tags
 # Ignore all local history of files
 .history
 .ionide
+
+### Eclipse IDE ###
+.cproject
+.project
+.settings/*
 
 # End of https://www.toptal.com/developers/gitignore/api/vim,intellij,meson,visualstudiocode
